--- a/Sources/RideHistory/List/RideHistoryCell.xib
+++ b/Sources/RideHistory/List/RideHistoryCell.xib
@@ -46,24 +46,24 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="200" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="Mercedes Berlins Classe S" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Gcx-VB-0BC">
-                                                <rect key="frame" x="0.0" y="27" width="330.5" height="15"/>
+                                                <rect key="frame" x="0.0" y="27" width="330.5" height="20"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" name="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6VZ-um-ckD">
-                                                <rect key="frame" x="0.0" y="45" width="330.5" height="20"/>
+                                                <rect key="frame" x="0.0" y="50" width="330.5" height="15"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sea-rP-HM8">
-                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
                                                         <color key="backgroundColor" red="0.34117648010000001" green="0.72156864399999998" blue="0.65098041299999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="20" id="05J-AW-Shz"/>
-                                                            <constraint firstAttribute="width" constant="20" id="wp3-hm-fZX"/>
+                                                            <constraint firstAttribute="width" secondItem="Sea-rP-HM8" secondAttribute="height" multiplier="1:1" id="b8l-Wg-awX"/>
+                                                            <constraint firstAttribute="width" constant="15" id="wp3-hm-fZX"/>
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="200" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" text="29 rue paradis 13009 Marseille" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="guE-2J-dLi">
-                                                        <rect key="frame" x="28" y="0.0" width="302.5" height="20"/>
+                                                        <rect key="frame" x="23" y="0.0" width="307.5" height="15"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                         <color key="textColor" name="textColor"/>
                                                         <nil key="highlightedColor"/>
