--- a/Sources/RideHistory/RideHistory.storyboard
+++ b/Sources/RideHistory/RideHistory.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
@@ -500,7 +501,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ex2-sv-l3H" customClass="ActionButton" customModule="ActionButton">
-                                                    <rect key="frame" x="24" y="8" width="366" height="49"/>
+                                                    <rect key="frame" x="24" y="8" width="366" height="61"/>
                                                     <color key="backgroundColor" red="0.34117648010000001" green="0.72156864399999998" blue="0.65098041299999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="tintColor" name="selectedButtonColor"/>
                                                     <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
@@ -510,7 +511,7 @@
                                             <constraints>
                                                 <constraint firstItem="Ex2-sv-l3H" firstAttribute="leading" secondItem="ifs-93-mBe" secondAttribute="leading" constant="24" id="BVe-Hj-8AW"/>
                                                 <constraint firstItem="Ex2-sv-l3H" firstAttribute="top" secondItem="ifs-93-mBe" secondAttribute="top" constant="8" id="WF0-qr-2Gj"/>
-                                                <constraint firstAttribute="bottom" secondItem="Ex2-sv-l3H" secondAttribute="bottom" constant="20" id="lao-kv-Qif"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ex2-sv-l3H" secondAttribute="bottom" constant="8" id="lao-kv-Qif"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ex2-sv-l3H" secondAttribute="trailing" constant="24" id="mgL-oR-iUU"/>
                                             </constraints>
                                         </collectionViewCellContentView>
@@ -670,6 +671,11 @@
             <point key="canvasLocation" x="2.8985507246376816" y="142.63392857142856"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="Ex2-sv-l3H">
+            <size key="intrinsicContentSize" width="66" height="38"/>
+        </designable>
+    </designables>
     <resources>
         <image name="NoRides" width="231" height="231"/>
         <image name="documentUser" width="83.5" height="82.5"/>
@@ -687,7 +693,7 @@
             <color red="0.84705882352941175" green="0.27058823529411763" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <namedColor name="textColor">
-            <color red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.16099999845027924" green="0.17599999904632568" blue="0.2199999988079071" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
